crates/ir/tests/ir/snapshots/main__ir__lower__traits__op_add_user_type.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__op_add_user_type

struct Vec2 { x: Int, y: Int }
instance core/semigroup.Semigroup[Vec2] { combine=Semigroup$$Vec2$$combine }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], u1, (u1, t1) -> u1) -> u1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Vec2 = construct Vec2(1, 1)
  let v2: Vec2 = construct Vec2(3, 2)
  let v3: Dict[core/semigroup.Semigroup, Vec2] = get_dict core/semigroup.Semigroup[Vec2]
  let v4: Vec2 = trait_call core/semigroup.Semigroup.combine(v3, v1, v2)
  let v5: Int = project v4.0
  let v0: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v6: Unit = call println(v0, v5)
  v6

fn Semigroup$$Vec2$$combine(v7: Vec2, v8: Vec2) -> Vec2 =
  let v9: Int = project v7.0
  let v10: Int = project v8.0
  let v11: Int = add_int(v9, v10)
  let v12: Int = project v7.1
  let v13: Int = project v8.1
  let v14: Int = add_int(v12, v13)
  let v15: Vec2 = construct Vec2(v11, v14)
  v15
