crates/ir/tests/ir/snapshots/main__ir__lower__traits__op_add_vec.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__op_add_vec

import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/vec/len as len(Vec[j7]) -> Int
declare len: (Vec[j7]) -> Int
declare println: (g) -> Unit

fn main() -> Unit =
  let_join v14(v12: Int) =
    let v0: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
    let v13: Unit = call println(v0, v12)
    v13
  in
  let_join v11(v9: Vec[Int]) =
    let v10: Int = call len(v9)
    jump v14(v10)
  in
  let v5: Dict[core/semigroup.Semigroup, Vec[Int]] = get_dict core/semigroup.Semigroup[Vec[Int]]
  let v6: Vec[Int] = make_vec(1, 2)
  let v7: Vec[Int] = make_vec(3, 4)
  let v8: Vec[Int] = trait_call core/semigroup.Semigroup.combine(v5, v6, v7)
  jump v11(v8)
