crates/ir/tests/ir/snapshots/main__ir__lower__traits__op_comparison_inferred.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__op_comparison_inferred

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], u1, (u1, t1) -> u1) -> u1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn is_equal(v0: Dict[core/eq.Eq, c11], v1: c11, v2: c11) -> Bool =
  let v3: Bool = trait_call core/eq.Eq.eq(v0, v1, v2)
  v3

fn main() -> Unit =
  let v5: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v6: Bool = call is_equal(v5, 1, 1)
  let v7: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v8: String = trait_call core/show.Show.show(v7, v6)
  let v4: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v9: Unit = call println(v4, v8)
  v9
