crates/ir/tests/ir/snapshots/main__ir__lower__traits__op_div_syntax.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__op_div_syntax

struct Vec2 { x: Int, y: Int }
instance core/div.Div[Vec2] { div=Div$$Vec2$$div }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: Vec2 = construct Vec2(6, 8)
  let v1: Vec2 = construct Vec2(2, 4)
  let_join v12(v10: Int) =
    let v2: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
    let v11: Unit = call println(v2, v10)
    v11
  in
  let_join v9(v7: Vec2) =
    let v8: Int = project v7.0
    jump v12(v8)
  in
  let v5: Dict[core/div.Div, Vec2] = get_dict core/div.Div[Vec2]
  let v6: Vec2 = trait_call core/div.Div.div(v5, v0, v1)
  jump v9(v6)

fn Div$$Vec2$$div(v13: Vec2, v14: Vec2) -> Vec2 =
  let v15: Int = project v13.0
  let v16: Int = project v14.0
  let v17: Int = div_int(v15, v16)
  let v18: Int = project v13.1
  let v19: Int = project v14.1
  let v20: Int = div_int(v18, v19)
  let v21: Vec2 = construct Vec2(v17, v20)
  v21
