crates/ir/tests/ir/snapshots/main__ir__lower__traits__op_eq_user_type.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__op_eq_user_type

struct Point { x: Int, y: Int }
instance core/eq.Eq[Point] { eq=Eq$$Point$$eq }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Point = construct Point(1, 2)
  let v2: Point = construct Point(1, 2)
  let v3: Dict[core/eq.Eq, Point] = get_dict core/eq.Eq[Point]
  let v4: Bool = trait_call core/eq.Eq.eq(v3, v1, v2)
  let v0: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v5: Unit = call println(v0, v4)
  v5

fn Eq$$Point$$eq(v6: Point, v7: Point) -> Bool =
  let_join v17(v12: Bool) =
    if v12 {
      let v13: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
      let v14: Int = project v6.1
      let v15: Int = project v7.1
      let v16: Bool = trait_call core/eq.Eq.eq(v13, v14, v15)
      v16
    } else {
      false
    }
  in
  let v8: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v9: Int = project v6.0
  let v10: Int = project v7.0
  let v11: Bool = trait_call core/eq.Eq.eq(v8, v9, v10)
  jump v17(v11)
