crates/ir/tests/ir/snapshots/main__ir__lower__traits__op_mul_syntax.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__op_mul_syntax

struct Vec2 { x: Int, y: Int }
instance core/mul.Mul[Vec2] { mul=Mul$$Vec2$$mul }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: Vec2 = construct Vec2(2, 3)
  let v1: Vec2 = construct Vec2(3, 2)
  let_join v12(v10: Int) =
    let v2: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
    let v11: Unit = call println(v2, v10)
    v11
  in
  let_join v9(v7: Vec2) =
    let v8: Int = project v7.0
    jump v12(v8)
  in
  let v5: Dict[core/mul.Mul, Vec2] = get_dict core/mul.Mul[Vec2]
  let v6: Vec2 = trait_call core/mul.Mul.mul(v5, v0, v1)
  jump v9(v6)

fn Mul$$Vec2$$mul(v13: Vec2, v14: Vec2) -> Vec2 =
  let v15: Int = project v13.0
  let v16: Int = project v14.0
  let v17: Int = mul_int(v15, v16)
  let v18: Int = project v13.1
  let v19: Int = project v14.1
  let v20: Int = mul_int(v18, v19)
  let v21: Vec2 = construct Vec2(v17, v20)
  v21
