crates/ir/tests/ir/snapshots/main__ir__lower__traits__op_neg_inferred.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__op_neg_inferred

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[x7]) -> List[x7]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn negate(v0: Dict[core/neg.Neg, j8], v1: j8) -> j8 =
  let v2: j8 = trait_call core/neg.Neg.neg(v0, v1)
  v2

fn main() -> Unit =
  let v4: Dict[core/neg.Neg, Int] = get_dict core/neg.Neg[Int]
  let v5: Int = call negate(v4, 5)
  let v6: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v7: String = trait_call core/show.Show.show(v6, v5)
  let v3: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v8: Unit = call println(v3, v7)
  v8
