crates/ir/tests/ir/snapshots/main__ir__lower__traits__op_neg_syntax.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__op_neg_syntax

struct Vec2 { x: Int, y: Int }
instance core/neg.Neg[Vec2] { neg=Neg$$Vec2$$neg }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: Vec2 = construct Vec2(3, 5)
  let_join v11(v9: Int) =
    let v1: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
    let v10: Unit = call println(v1, v9)
    v10
  in
  let_join v8(v6: Vec2) =
    let v7: Int = project v6.0
    jump v11(v7)
  in
  let v4: Dict[core/neg.Neg, Vec2] = get_dict core/neg.Neg[Vec2]
  let v5: Vec2 = trait_call core/neg.Neg.neg(v4, v0)
  jump v8(v5)

fn Neg$$Vec2$$neg(v12: Vec2) -> Vec2 =
  let v13: Int = project v12.0
  let v14: Int = sub_int(0, v13)
  let v15: Int = project v12.1
  let v16: Int = sub_int(0, v15)
  let v17: Vec2 = construct Vec2(v14, v16)
  v17
